# https://pypi.org/project/setupcfg-generator/
[metadata]
name = scache
version = 1.01
url = https://github.com/smeggingsmegger/scache
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = simple json key value cache

[options]
install_requires =
	setuptools
packages =
	scache
